# pico_uart_bridge-Ryoiki_Project_edition

./: CMakeLists.txt  LICENSE.md  README.md  build.sh  uart-bridge.c  usb-descriptors.c
.github/workflows/: ci.yml
